--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna Recipe</title>
 </head>
 <body>
+    <h1> Lasagna Recipe</h1>
+    <img src="../images/lasagna-image.webp">
+    <p>This Lasagna Recipe is easy to make with a creamy ricotta cheese mixture, savory meat sauce, 
+        and mozzarella cheese. 
+        BONUS: it’s make-ahead and freezer-friendly!</p>
+    <p>This is a great freezer meal, make-ahead recipe, 
+        and leftovers freeze and reheat super well. </p>
+
+       <h2> Ingredients</h2> 
+       <ul>
+        <li>ricotta chesese 2 cups</li>
+        <li> 1 large egg</li>
+        <li> 3/4 cup Parmesan cheese</li>
+        <li> 2 teaspoons of Italian seasoning</li>
+        <li> 1/2 teaspoon salt</li>
+        <li> 1/4 tsp pepper</li>
+        <li> 1 tablespoon olive oil</li>
+        <li> 1 yellow onion</li>
+        <li> 3/4lbs ground beef</li>
+        <li> 3/4lb. ground Italian sausage</li>
+        <li> 3 cloves garlic</li>
+        <li> 1/2 cup chicken broth</li>
+        <li> 40 oz marinara sauce</li>
+        <li> 1 tablespoon tomato paste</li>
+        <li> 1 teapoon hot sauce</li>
+        <li> 1 teaspoon worcestershire sauce</li>
+        <li> 12 lasagna noodle</li>
+        <li> 2.5 cups mozzarella cheese</li>
+       </ul>
+
+       <h2> Steps</h2>
+       <ol>
+        <li> Spoon meat sauce on the bottom of a lightly greased casserole dish. </li>
+        <li> Add 4 boiled lasagna noodles (or use no-boil or fresh noodles). </li>
+        <li> Spread 1/3 of the ricotta cheese mixture on top. </li>
+        <li> Add 1.5 cups of meat sauce.</li>
+        <li> Repeat the same layers two more times.</li>
+        <li> Top with mozzarella cheese</li>
+        <li> Cover and bake at 375° for 30 minutes. </li>
+        <li> Remove cover and bake for 15 more minutes.</li>
+        <li> Broil at the end if desired. Let it rest 
+            for 15 minutes prior to serving with Garlic Bread With Cheese.</li>
+
+       </ol>
+
+
+
+    <br>
     <a href="../index.html">home</a>
 </body>
 </html>
