--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 <body>
     <h1> Lasagna Recipe</h1>
     <!-- used a webp file for the image instead of jpg to see how it works -->
-    <img src="../images/lasagna-image.webp">
+    <img src="../images/lasagna-image.webp" alt="lasagna picture">
     <!-- got all information from https://thecozycook.com/easy-lasagna-recipe/ -->
     <p>This Lasagna Recipe is easy to make with a creamy ricotta cheese mixture, savory meat sauce, 
         and mozzarella cheese. 
