--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1> Odin Recipes</h1>
     <a href="./recipes/lasagna.html"> Lasagna</a>
+    <a href="./recipes/enchiladas.html"> Enchiladas</a>
+    <a href="./recipes/banana-bread.html"> Banana Bread</a>
     
 
 
