feat: filled banana-bread

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Banana Bread Recipe</title>
 </head>
 <body>
-    
+    <h1> Banana Bread</h1>
+    <!-- all information from https://natashaskitchen.com/banana-bread-recipe-video/ -->
+    <img src="../images/banana-bread-image.jpg">
+    <p> This is my husband’s recipe which he has perfected over the years and he is known for his Banana Bread. He makes it frequently and it always disappears fast! It is simple to make and our favorite way to use up overripe bananas so they never go to waste. It’s super moist and makes a great breakfast on-the-go. We even created Banana Muffins from this recipe.</p>
+    <p>This loaf stays moist for days and also makes for a thoughtful and delicious gift idea for the holidays (I’ll take banana bread over fruit cake any day). </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li> 3 very ripe bananas</li>
+        <li> 1/2 cup unsalted better</li>
+        <li> 3/4 cup granulated sugar</li>
+        <li> 2 large eggs, lightly beaten</li>
+        <li> 1 1/2 cups all-purpose flour</li>
+        <li> 1 tsp basking soda</li>
+        <li> 1/2 tsp salt</li>
+        <li> 1/2 tsp vanilla extrace</li>
+        <li> 1 cup walnuts</li>
+        <li> 1/2 cup raisins</li>
+    </ul>
+
+
+    <h2> Steps</h2>
+    <ol>
+        <li> Preheat the oven to 350°F. Grease and flour a bread loaf pan (9.25 long x 5.25 wide x 2.75 deep). Lightly roast walnuts on a skillet, continuously stirring so they won’t burn. Coarsely chop and cool to room temperature. </li>
+        <li> In a mixing bowl, cream together 8 Tbsp softened butter and 3/4 cup sugar (or honey if using honey). </li>
+        <li> Mash bananas with a fork until the consistency of chunky applesauce and add them to the batter along with 2 eggs, mixing until blended. </li>
+        <li> In a separate bowl, whisk together: 1 1/2 cups of flour, 1 tsp of baking soda and 1/2 tsp of salt then add to batter.</li>
+        <li> Add 1/2 tsp of vanilla extract and mix in chopped walnuts and raisins. Pour into prepared loaf pan. Bake at 350˚F for 55-60 min or until a toothpick inserted into the center comes out clean. Let banana bread rest for 10 min before transferring to a wire rack to cool.</li>
+ 
+    </ol>
+
+
+
+    <a href="../index.html">home</a>
 </body>
 </html>
