--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <h1> Odin Recipes</h1>
-    <a href="./recipes/lasagna.html"> Lasagna</a>
-    <a href="./recipes/enchiladas.html"> Enchiladas</a>
-    <a href="./recipes/banana-bread.html"> Banana Bread</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html"> Lasagna</a></li>
+        <li><a href="./recipes/enchiladas.html"> Enchiladas</a></li>
+        <li><a href="./recipes/banana-bread.html"> Banana Bread</a></li>
+    </ul>
     
 
 
