docs: add description title to recipes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,6 +9,7 @@
     <h1> Lasagna Recipe</h1>
     <!-- used a webp file for the image instead of jpg to see how it works -->
     <img src="../images/lasagna-image.webp" alt="lasagna picture">
+    <h1> Description</h1>
     <!-- got all information from https://thecozycook.com/easy-lasagna-recipe/ -->
     <p>This Lasagna Recipe is easy to make with a creamy ricotta cheese mixture, savory meat sauce, 
         and mozzarella cheese. 
