--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -9,6 +9,7 @@
     <h1> Enchiladas</h1>
     <!-- all information from https://www.allrecipes.com/recipe/77917/authentic-mexican-enchiladas/  -->
     <img src="../images/enchiladas-image.jpg" alt="mexican enchilada image">
+    <h1> Description</h1>
     <p>This Mexican enchiladas recipe is the real thing. Corn tortillas are dipped in a homemade sauce, fried, filled with Mexican queso fresco, then topped with sour cream, lettuce, and tomato. </p>
     <p>My mother-in-law is from Mexico and taught me to make this delicious dish. Serve with traditional refried beans. It has a taste different from the norm — so good!</p>
 
