docs: comments about box sizing

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enchiladas recipes</title>
@@ -14,7 +15,7 @@
     <p>My mother-in-law is from Mexico and taught me to make this delicious dish. Serve with traditional refried beans. It has a taste different from the norm — so good!</p>
 
     <h2> Ingredients</h2>
-    <ul>
+    <ul class="ul-ingredients">
         <li> 6 dried chile de arbol peppers</li>
         <li> 3/4 cup water, or as needed </li>
         <li> 1 clove garlic</li>
@@ -26,7 +27,7 @@
 
 
     <h2> Steps</h2>
-    <ol>
+    <ol class="ol-steps">
         <li>Snap tops off of dried chiles and place in a saucepan with enough water to cover. Bring to a boil and simmer for 15 minutes. Drain water and place chiles into a food processor or blender with garlic and salt. Purée until smooth. Press sauce through a strainer and set aside.</li>
         <li>Heat oil in a large skillet over medium heat. Soak each tortilla in the sauce, then place in the hot oil. Turn over almost immediately and fry for about 5 seconds on the other side. Remove to a plate that is lined with paper towels, stacking them on top of each other to keep them pliable for filling.</li>
         <li>Take one fried tortilla at a time and fill with about 2 tablespoons queso fresco. Roll up and place seam side down on a plate. Place three of these on each plate.</li>
