--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,7 @@
     <title>Lasagna Recipe</title>
 </head>
 <body>
+    <link rel="stylesheet" href="../style.css">
     <h1> Lasagna Recipe</h1>
     <!-- used a webp file for the image instead of jpg to see how it works -->
     <img src="../images/lasagna-image.webp" alt="lasagna picture">
@@ -18,7 +19,7 @@
         and leftovers freeze and reheat super well. </p>
 
        <h2> Ingredients</h2> 
-       <ul>
+       <ul class="ul-ingredients">
         <li>ricotta chesese 2 cups</li>
         <li> 1 large egg</li>
         <li> 3/4 cup Parmesan cheese</li>
@@ -40,7 +41,7 @@
        </ul>
 
        <h2> Steps</h2>
-       <ol>
+       <ol class="ol-steps">
         <li> Spoon meat sauce on the bottom of a lightly greased casserole dish. </li>
         <li> Add 4 boiled lasagna noodles (or use no-boil or fresh noodles). </li>
         <li> Spread 1/3 of the ricotta cheese mixture on top. </li>
