--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head></head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1> Odin Recipes</h1>
-    <ul>
+    <ul class="ul-main">
         <li><a href="./recipes/lasagna.html"> Lasagna</a></li>
         <li><a href="./recipes/enchiladas.html"> Enchiladas</a></li>
         <li><a href="./recipes/banana-bread.html"> Banana Bread</a></li>
