--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bread Recipe</title>
@@ -14,7 +15,7 @@
     <p>This loaf stays moist for days and also makes for a thoughtful and delicious gift idea for the holidays (I’ll take banana bread over fruit cake any day). </p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ul-ingredients">
         <li> 3 very ripe bananas</li>
         <li> 1/2 cup unsalted better</li>
         <li> 3/4 cup granulated sugar</li>
@@ -29,7 +30,7 @@
 
 
     <h2> Steps</h2>
-    <ol>
+    <ol class="ol-steps">
         <li> Preheat the oven to 350°F. Grease and flour a bread loaf pan (9.25 long x 5.25 wide x 2.75 deep). Lightly roast walnuts on a skillet, continuously stirring so they won’t burn. Coarsely chop and cool to room temperature. </li>
         <li> In a mixing bowl, cream together 8 Tbsp softened butter and 3/4 cup sugar (or honey if using honey). </li>
         <li> Mash bananas with a fork until the consistency of chunky applesauce and add them to the batter along with 2 eggs, mixing until blended. </li>
