fixed: css boxe and added divs

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,36 +7,46 @@
     <title>Enchiladas recipes</title>
 </head>
 <body>
-    <h1> Enchiladas</h1>
-    <!-- all information from https://www.allrecipes.com/recipe/77917/authentic-mexican-enchiladas/  -->
-    <img src="../images/enchiladas-image.jpg" alt="mexican enchilada image">
-    <h1> Description</h1>
-    <p>This Mexican enchiladas recipe is the real thing. Corn tortillas are dipped in a homemade sauce, fried, filled with Mexican queso fresco, then topped with sour cream, lettuce, and tomato. </p>
-    <p>My mother-in-law is from Mexico and taught me to make this delicious dish. Serve with traditional refried beans. It has a taste different from the norm — so good!</p>
+    <div class="main-div">
+           <div class="dish-info">
+            <h1> Enchiladas</h1>
+            <!-- all information from https://www.allrecipes.com/recipe/77917/authentic-mexican-enchiladas/  -->
+            <img src="../images/enchiladas-image.jpg" alt="mexican enchilada image">
+            </div>
+                <div class="descrip-div">
+                    <h1> Description</h1>
+                    <p>This Mexican enchiladas recipe is the real thing. Corn tortillas are dipped in a homemade sauce, fried, filled with Mexican queso fresco, then topped with sour cream, lettuce, and tomato. </p>
+                    <p>My mother-in-law is from Mexico and taught me to make this delicious dish. Serve with traditional refried beans. It has a taste different from the norm — so good!</p>
+                </div>
+                <h2> Ingredients</h2>
+                <div class="ingredients-div">
+                    <ul class="ul-ingredients">
+                        <li> 6 dried chile de arbol peppers</li>
+                        <li> 3/4 cup water, or as needed </li>
+                        <li> 1 clove garlic</li>
+                        <li> 1 teaspoon salt</li>
+                        <li> 1 cup vegetable oil for frying</li>
+                        <li> 18(6 inch) corn tortillas</li>
+                        <li> 3 cups crumbled queso freso, divided</li>
+                    </ul>
+                </div>
+                <div class="steps-div">
+                    <h2> Steps</h2>
+                    <ol class="ol-steps">
+                        <li>Snap tops off of dried chiles and place in a saucepan with enough water to cover. Bring to a boil and simmer for 15 minutes. Drain water and place chiles into a food processor or blender with garlic and salt. Purée until smooth. Press sauce through a strainer and set aside.</li>
+                        <li>Heat oil in a large skillet over medium heat. Soak each tortilla in the sauce, then place in the hot oil. Turn over almost immediately and fry for about 5 seconds on the other side. Remove to a plate that is lined with paper towels, stacking them on top of each other to keep them pliable for filling.</li>
+                        <li>Take one fried tortilla at a time and fill with about 2 tablespoons queso fresco. Roll up and place seam side down on a plate. Place three of these on each plate.</li>
+                        <li>Top tortillas in the following order: Start with a layer of sour cream, then a small handful of lettuce, three tomato slices, 2 more tablespoons queso fresco, and 1 tablespoon green onions.</li>
+                    </ol>
+                </div>
+        
 
-    <h2> Ingredients</h2>
-    <ul class="ul-ingredients">
-        <li> 6 dried chile de arbol peppers</li>
-        <li> 3/4 cup water, or as needed </li>
-        <li> 1 clove garlic</li>
-        <li> 1 teaspoon salt</li>
-        <li> 1 cup vegetable oil for frying</li>
-        <li> 18(6 inch) corn tortillas</li>
-        <li> 3 cups crumbled queso freso, divided</li>
-    </ul>
+
+    <div class="link-div">
+         <span> <a href="../index.html">home</a> </span>
+    </div>
 
 
-    <h2> Steps</h2>
-    <ol class="ol-steps">
-        <li>Snap tops off of dried chiles and place in a saucepan with enough water to cover. Bring to a boil and simmer for 15 minutes. Drain water and place chiles into a food processor or blender with garlic and salt. Purée until smooth. Press sauce through a strainer and set aside.</li>
-        <li>Heat oil in a large skillet over medium heat. Soak each tortilla in the sauce, then place in the hot oil. Turn over almost immediately and fry for about 5 seconds on the other side. Remove to a plate that is lined with paper towels, stacking them on top of each other to keep them pliable for filling.</li>
-        <li>Take one fried tortilla at a time and fill with about 2 tablespoons queso fresco. Roll up and place seam side down on a plate. Place three of these on each plate.</li>
-        <li>Top tortillas in the following order: Start with a layer of sour cream, then a small handful of lettuce, three tomato slices, 2 more tablespoons queso fresco, and 1 tablespoon green onions.</li>
-    </ol>
-
-
-
-
-    <a href="../index.html">home</a>
+    </div>
 </body>
 </html>
