--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
 </head>
 <body>
-    <link rel="stylesheet" href="../style.css">
+
+    <div class="main-div">
+
+
+    <div class="dish-info">
     <h1> Lasagna Recipe</h1>
     <!-- used a webp file for the image instead of jpg to see how it works -->
     <img src="../images/lasagna-image.webp" alt="lasagna picture">
+    </div>
+
+    <div class="descrip-div">
     <h1> Description</h1>
     <!-- got all information from https://thecozycook.com/easy-lasagna-recipe/ -->
     <p>This Lasagna Recipe is easy to make with a creamy ricotta cheese mixture, savory meat sauce, 
@@ -17,7 +25,10 @@
         BONUS: it’s make-ahead and freezer-friendly!</p>
     <p>This is a great freezer meal, make-ahead recipe, 
         and leftovers freeze and reheat super well. </p>
+    </div>
 
+
+    <div class="ingredients-div">
        <h2> Ingredients</h2> 
        <ul class="ul-ingredients">
         <li>ricotta chesese 2 cups</li>
@@ -39,7 +50,9 @@
         <li> 12 lasagna noodle</li>
         <li> 2.5 cups mozzarella cheese</li>
        </ul>
+    </div>
 
+    <div class="steps-div">
        <h2> Steps</h2>
        <ol class="ol-steps">
         <li> Spoon meat sauce on the bottom of a lightly greased casserole dish. </li>
@@ -54,10 +67,12 @@
             for 15 minutes prior to serving with Garlic Bread With Cheese.</li>
 
        </ol>
+    </div>
 
 
-
-    <br>
-    <a href="../index.html">home</a>
+    <div class="link-div">
+        <span> <a href="../index.html">home</a> </span>
+   </div>
+    </div>
 </body>
 </html>
