--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <title>Odin Recipes</title>
 </head>
 <body>
+
     <h1> Odin Recipes</h1>
+
+    <div class="main-div">
     <ul class="ul-main">
         <li><a href="./recipes/lasagna.html"> Lasagna</a></li>
         <li><a href="./recipes/enchiladas.html"> Enchiladas</a></li>
         <li><a href="./recipes/banana-bread.html"> Banana Bread</a></li>
     </ul>
     
-
+</div>
 
 
 
