feat: flexbox added for banana-bread

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -9,16 +9,22 @@
 <body>
     <div class="main-div">
         <div class="dish-info">
-        <h1> Banana Bread</h1>
-        <!-- all information from https://natashaskitchen.com/banana-bread-recipe-video/ -->
-        <img src="../images/banana-bread-image.jpg" width="300" alt="Banana Bread image">
+            
+            <!-- all information from https://natashaskitchen.com/banana-bread-recipe-video/ -->
+            <img src="../images/banana-bread-image.jpg" width="300" alt="Banana Bread image">
+            <!-- <h1> Banana Bread</h1> -->
+            <div class="descrip-div">
+                <h1> Banana Bread</h1>
+
+
+                <h2> Description</h2>
+                <p> This is my husband’s recipe which he has perfected over the years and he is known for his Banana Bread. He makes it frequently and it always disappears fast! It is simple to make and our favorite way to use up overripe bananas so they never go to waste. It’s super moist and makes a great breakfast on-the-go. We even created Banana Muffins from this recipe.</p>
+                <p>This loaf stays moist for days and also makes for a thoughtful and delicious gift idea for the holidays (I’ll take banana bread over fruit cake any day). </p>
+            </div>
+
          </div>
 
-        <div class="descrip-div">
-        <h2> Description</h2>
-        <p> This is my husband’s recipe which he has perfected over the years and he is known for his Banana Bread. He makes it frequently and it always disappears fast! It is simple to make and our favorite way to use up overripe bananas so they never go to waste. It’s super moist and makes a great breakfast on-the-go. We even created Banana Muffins from this recipe.</p>
-        <p>This loaf stays moist for days and also makes for a thoughtful and delicious gift idea for the holidays (I’ll take banana bread over fruit cake any day). </p>
-        </div>
+      
 
 
         <div class="ingredients-div">
